--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-sockets",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "API v3 Web-Socket Service",
   "main": "dist/app.js",
   "license": "MIT",
@@ -20,8 +20,7 @@
   "dependencies": {
     "amqplib": "^0.5.3",
     "js-yaml": "^3.13.1",
-    "stack-trace": "^0.0.10",
-    "winston": "^3.2.1",
+    "very-simple-logger": "^1.2.0",
     "ws": "^6.1.3"
   },
   "devDependencies": {
